unpackaged/main/default/objects/Checkpoint__c/Checkpoint__c.object-meta.xml
<CustomObject>
    <label>Checkpoint</label>
    <nameField>
        <displayFormat>CP-{000000}</displayFormat>
        <label>Checkpoint Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checkpoints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>