unpackaged/main/default/objects/Checkpoint__c/fields/Action_Items__c.field-meta.xml
<CustomField>
    <fullName>Action_Items__c</fullName>
    <label>Action Items</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>