unpackaged/main/default/objects/Checkpoint__c/fields/Agenda__c.field-meta.xml
<CustomField>
    <fullName>Agenda__c</fullName>
    <label>Agenda</label>
    <length>4000</length>
    <type>Html</type>
</CustomField>