unpackaged/main/default/objects/Checkpoint__c/fields/Other_Details__c.field-meta.xml
<CustomField>
    <fullName>Other_Details__c</fullName>
    <label>Other Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>