unpackaged/main/default/objects/Checkpoint__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <formula>Enrollment_Record__r.Student_Account__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone</label>
    <type>Text</type>
</CustomField>