unpackaged/main/default/objects/Checkpoint__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Welcome Call</fullName>
            </value>
            <value>
                <fullName>1 Week Check-In</fullName>
            </value>
            <value>
                <fullName>3 Week Check-In</fullName>
            </value>
            <value>
                <fullName>6 Week Check-In</fullName>
            </value>
            <value>
                <fullName>Parent 1 Week Check-in</fullName>
            </value>
            <value>
                <fullName>Parent 4 Week Check-in</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Academic Success Plan</fullName>
            </value>
            <value>
                <fullName>College &amp; Career Plan</fullName>
            </value>
            <value>
                <fullName>Initial 1:1</fullName>
            </value>
            <value>
                <fullName>Mid-Semester 1:1</fullName>
            </value>
            <value>
                <fullName>Final 1:1</fullName>
            </value>
            <value>
                <fullName>SLC Meeting Notes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>