unpackaged/main/default/objects/Checkpoint__c/recordTypes/ASC_Meeting_Notes.recordType-meta.xml
<RecordType>
    <fullName>ASC_Meeting_Notes</fullName>
    <active>true</active>
    <label>ASC Meeting Notes</label>
</RecordType>