unpackaged/main/default/objects/Checkpoint__c/recordTypes/Standard.recordType-meta.xml
<RecordType>
    <fullName>Standard</fullName>
    <active>true</active>
    <description>Default Record Type for Checkpoints</description>
    <label>Standard</label>
</RecordType>