unpackaged/main/default/objects/Checkpoint__c/validationRules/Completed_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Completed_Date_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( Status__c , &quot;Completed&quot;), 
ISBLANK( Completed_Date__c ))</errorConditionFormula>
    <errorMessage>Please enter a completed date.</errorMessage>
</ValidationRule>