unpackaged/main/default/objects/Checkpoint__c/listViews/Backfill.listView-meta.xml
<ListView>
    <fullName>Backfill</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>Backfill</label>
</ListView>