unpackaged/main/default/objects/Checkpoint__c/listViews/My_Checkpoints.listView-meta.xml
<ListView>
    <fullName>My_Checkpoints</fullName>
    <columns>NAME</columns>
    <columns>Enrollment_Record__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Checkpoints</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>