unpackaged/main/default/objects/Checkpoint__c/listViews/My_High_Priority_Retention_Pushes_Due_To.listView-meta.xml
<ListView>
    <fullName>My_High_Priority_Retention_Pushes_Due_To</fullName>
    <columns>NAME</columns>
    <columns>Due_Date__c</columns>
    <columns>Completed_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Outcome__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Checkpoint__c.Standard</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Other</value>
    </filters>
    <label>My High Priority Retention Pushes Today</label>
</ListView>