unpackaged/main/default/objects/Checkpoint__c/listViews/My_Overdue_Welcome_Calls.listView-meta.xml
<ListView>
    <fullName>My_Overdue_Welcome_Calls</fullName>
    <columns>NAME</columns>
    <columns>Enrollment_Record__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Due_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Welcome Call</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>Due_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>My Overdue Welcome Calls</label>
</ListView>