unpackaged/main/default/objects/Checkpoint__c/listViews/My_Welcome_Calls_Due_This_Week.listView-meta.xml
<ListView>
    <fullName>My_Welcome_Calls_Due_This_Week</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Welcome Call</value>
    </filters>
    <filters>
        <field>Due_Date__c</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>My Welcome Calls Due This Week</label>
</ListView>